# backendCpp

./: CMakeLists.txt  README.md
include/: server.h
src/: main.cpp  main.h
src/controllers/: controller.cpp  controller.h
src/models/: model.cpp  model.h
src/views/: view.cpp  view.h
